# WEB-Frontend

./: .env  README.md  go.mod  go.sum  index.html  main.py  manifest.json  serviceWorker.js
.github/workflows/: static.yml
assets/: index-0ZuKdOgY.css  index-4ewQv8oK.js  index-8ei_bymQ.css  index-8iJWuov8.js  index-BXm_5C7H.css  index-Bcw4I7nM.js  index-BfV23Rk1.css  index-Bkekk-Qf.js  index-BqTFEuYb.js  index-Bvyom3Zy.js  index-Bxbzu1fC.css  index-C6zPeJhK.js  index-C9k2d1EX.js  index-CCs7ePE0.js  index-CGUml73s.js  index-CHvmKDsK.css  index-CU73CpZG.css  index-CmMnrm_a.css  index-Cn7zdp7B.js  index-CnwG7bQf.js  index-CugR8Eeg.css  index-CvipKh2V.css  index-CxMd93Xk.js  index-CzbBy0OU.js  index-DEe2yXba.js  index-DHtAqS6x.js  index-DIevpPnQ.js  index-DNp_lBdk.js  index-DX1BY_8x.css  index-DfIfYnQX.css  index-Dfq7Hfwt.css  index-DqTCA005.js  index-DwfNnNc-.js  index-HBFsLPSo.css  index-Jqu6Rvs0.css  index-Q-IOcMpz.css  index-RqAlZ1FC.css  index-TUZRNN9X.js  index-az96otSE.css  index-fAwtFD3F.css  (+5 more)
cmd/lab1/: main.go
config/: config.toml
docs/: docs.go  swagger.json  swagger.yaml
frontend/: .env.production  ca.crt  ca.key  cert.crt  cert.key  cert.pem  index.html  key.pem  localhost+1-key.pem  localhost+1.pem  localhost+6-key.pem  localhost+6.pem  localhost-key.pem  localhost.pem  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
lab8-django/: manage.py
templates/: star_details.html  stars_catalog.html  starscart_calc_speed.html
(+71 files in other folders)
