[package]
name = "galaxy-app"
version = "0.1.0"
description = ""
authors = ["You"]
edition = "2021"

[dependencies]
tauri = { version = "2.9.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }
